modal function fix

--- a/src/app/chkrd-modal-js/chkrd-modal-js.component.html
+++ b/src/app/chkrd-modal-js/chkrd-modal-js.component.html
@@ -1,2 +1,7 @@
 <p>chkrd-modal-js works!</p>
-<app-modal-comp></app-modal-comp>
+<app-modal-button 
+[modalButtonText]="'First Button'"
+[modalId]="'id1'"
+[modalBody]="'First Modal'"
+[modalTitle]="'First Modal Title'"
+></app-modal-button>
