--- a/src/app/chkrd-modal-js/components/modal-button/modal-button.component.html
+++ b/src/app/chkrd-modal-js/components/modal-button/modal-button.component.html
@@ -1,4 +1,4 @@
 <div>
-  <button>{{modalButtonText}}</button>
+  <button (click)="createModal()">{{modalButtonText}}</button>
   <div #modal [id]="modalId"></div>
 </div>
